...
      }
    },
    "Add field" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Add stop" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Address or place" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Cancelled" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Checkout" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Close" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Continue" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Delete" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Deliveries" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Done" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Edit template" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Edit the place" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Family name" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Given name" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Library" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "New Delivery" : {
      "localizations" : {
        "ru" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Заказ"
          }
        }
...
      }
    },
    "Order placed — finding a courier" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Parcels" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Save" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Save the point" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Scheduled pickup" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Settings" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "To the door" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Try again" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Value" : {
      "localizations" : {
        "ru" : {
...
      }
    },
    "Your fields" : {
      "localizations" : {
        "ru" : {
...
